chore: add pgvector extension (#156)
Signed-off-by: Jonathan Gonzalez V <jonathan.gonzalez@enterprisedb.com>
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>
Co-authored-by: Jaime Silvela <jaime.silvela@enterprisedb.com>
Co-authored-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/UBI/Dockerfile.template
+++ b/UBI/Dockerfile.template
@@ -38,6 +38,7 @@ RUN set -xe ; \
 		pg_failover_slots_%%PG_MAJOR%% \
 		pg_squeeze_%%PG_MAJOR%% \
 		"$pg_audit_pkg" \
+		pgvector_%%PG_MAJOR%% \
 	; \
 	rm -fr /tmp/* ; \
 	yum -y clean all --enablerepo='*'
