chore: add postgis multiarch
Signed-off-by: Jonathan Gonzalez V. <jonathan.gonzalez@enterprisedb.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -232,6 +232,9 @@ jobs:
           # postgis multilang
           yq eval-all '. as $item ireduce ({}; . *+ $item )' clusterimagecatalog/[0-9][0-9]-ubi8-postgis-multilang.yaml > image-catalogs/ClusterImageCatalog-ubi8-postgis-multilang.yaml
 
+          # postgis multiarch
+          yq eval-all '. as $item ireduce ({}; . *+ $item )' clusterimagecatalog/[0-9][0-9]-ubi8-postgis-multiarch.yaml > image-catalogs/ClusterImageCatalog-ubi8-postgis-multiarch.yaml
+
           cat image-catalogs/*.yaml
 
       - name: Temporarily disable "include administrators" branch protection
