--- a/UBI/12/Dockerfile.postgis-multiarch
+++ b/UBI/12/Dockerfile.postgis-multiarch
@@ -1,14 +1,15 @@
 # vim:set ft=dockerfile:
-FROM quay.io/enterprisedb/edb-ubi:%%UBI_VERSION%%
+FROM quay.io/enterprisedb/edb-ubi:8.10-901.1717584420
+ARG SUBSCRIPTION_NAME
 
 # Do not split the description, otherwise we will see a blank space in the labels
-LABEL name="PostgreSQL Container Images" \
+LABEL name="PostgreSQL + PostGIS Container Images" \
       vendor="EnterpriseDB" \
       url="https://www.enterprisedb.com/" \
-      version="%%POSTGRES_VERSION%%" \
-      release="%%IMAGE_RELEASE_VERSION%%" \
-      summary="PostgreSQL Container images." \
-      description="This Docker image contains PostgreSQL and Barman Cloud based on RedHat Universal Base Images (UBI) %%UBI_MAJOR_VERSION%%."
+      version="12.19" \
+      release="7" \
+      summary="PostgreSQL + PostGIS Container images." \
+      description="This Docker image contains PostgreSQL, PostGIS and Barman Cloud based on RedHat Universal Base Images (UBI) 8."
 
 COPY root/ /
 
@@ -17,33 +18,33 @@ RUN --mount=type=secret,id=cs_token \
 	set -xe ; \
 	ARCH="${TARGETARCH}" ; \
 	base_url="https://download.postgresql.org/pub/repos/yum/reporpms" ; \
-	pg_failover_slots_pkg="pg_failover_slots_%%PG_MAJOR%%" ; \
-	pg_squeeze_pkg="pg_squeeze_%%PG_MAJOR%%" ; \
-	pgvector="pgvector_%%PG_MAJOR%%" ; \
-	pg_audit_pkg="pgaudit%%PGAUDIT_VERSION%%_%%PG_MAJOR%%" ; \
+	pg_failover_slots_pkg="pg_failover_slots_12" ; \
+	pg_squeeze_pkg="pg_squeeze_12" ; \
+	pgvector="pgvector_12" ; \
+	pg_audit_pkg="pgaudit14_12" ; \
 	case $ARCH in \
 			amd64) \
-					yum -y install "${base_url}/EL-%%UBI_MAJOR_VERSION%%-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ; \
+					yum -y install "${base_url}/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ; \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
-					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="pgaudit_%%PG_MAJOR%%"; fi ;; \
+					if [ "12" -gt "15" ]; then pg_audit_pkg="pgaudit_12"; fi ;; \
 			arm64) \
-					yum -y install "${base_url}/EL-%%UBI_MAJOR_VERSION%%-aarch64/pgdg-redhat-repo-latest.noarch.rpm" ; \
+					yum -y install "${base_url}/EL-8-aarch64/pgdg-redhat-repo-latest.noarch.rpm" ; \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
-					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="pgaudit_%%PG_MAJOR%%"; fi ;; \
+					if [ "12" -gt "15" ]; then pg_audit_pkg="pgaudit_12"; fi ;; \
 			ppc64le) \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
-					pg_failover_slots_pkg="edb-pg%%PG_MAJOR%%-pg-failover-slots1" ; \
-					pg_squeeze_pkg="edb-pg%%PG_MAJOR%%-pg-squeeze1" ; \
-					pgvector="edb-pg%%PG_MAJOR%%-pgvector0" ; \
-					pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit1" ; \
-					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit%%PG_MAJOR%%"; fi ;; \
+					pg_failover_slots_pkg="edb-pg12-pg-failover-slots1" ; \
+					pg_squeeze_pkg="edb-pg12-pg-squeeze1" ; \
+					pgvector="edb-pg12-pgvector0" ; \
+					pg_audit_pkg="edb-pg12-pgaudit1" ; \
+					if [ "12" -gt "15" ]; then pg_audit_pkg="edb-pg12-pgaudit12"; fi ;; \
 			s390x) \
 					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/edb/setup.rpm.sh | bash ; \
-					pg_failover_slots_pkg="edb-pg%%PG_MAJOR%%-pg-failover-slots1" ; \
-					pg_squeeze_pkg="edb-pg%%PG_MAJOR%%-pg-squeeze1" ; \
-					pgvector="edb-pg%%PG_MAJOR%%-pgvector0" ; \
-					pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit1" ; \
-					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit%%PG_MAJOR%%"; fi ;; \
+					pg_failover_slots_pkg="edb-pg12-pg-failover-slots1" ; \
+					pg_squeeze_pkg="edb-pg12-pg-squeeze1" ; \
+					pgvector="edb-pg12-pgvector0" ; \
+					pg_audit_pkg="edb-pg12-pgaudit1" ; \
+					if [ "12" -gt "15" ]; then pg_audit_pkg="edb-pg12-pgaudit12"; fi ;; \
 			*) \
 					exit 1 ;; \
 	esac ; \
@@ -51,11 +52,11 @@ RUN --mount=type=secret,id=cs_token \
 	yum -y reinstall glibc-common ; \
 	rm -fr /etc/rpm/macros.image-language-conf ; \
 	yum -y install hostname rsync tar gettext bind-utils nss_wrapper glibc-locale-source glibc-langpack-en glibc-all-langpacks ; \
-	yum -y --setopt=tsflags=nodocs install%%YUM_OPTIONS%% \
-			postgresql%%PG_MAJOR%%-%%POSTGRES_VERSION%% \
-			postgresql%%PG_MAJOR%%-contrib-%%POSTGRES_VERSION%% \
-			postgresql%%PG_MAJOR%%-server-%%POSTGRES_VERSION%% \
-			postgresql%%PG_MAJOR%%-libs-%%POSTGRES_VERSION%% \
+	yum -y --setopt=tsflags=nodocs install \
+			postgresql12-12.19 \
+			postgresql12-contrib-12.19 \
+			postgresql12-server-12.19 \
+			postgresql12-libs-12.19 \
 			"$pg_audit_pkg" \
 			"$pg_squeeze_pkg" \
 			"$pg_failover_slots_pkg" \
@@ -74,8 +75,8 @@ RUN set -xe ; \
 
 # make the sample config easier to munge (and "correct by default")
 RUN set -eux; \
-	sed -ri "s!^#?(listen_addresses)\s*=\s*\S+.*!\1 = '*'!" /usr/pgsql-%%PG_MAJOR%%/share/postgresql.conf.sample; \
-	grep -F "listen_addresses = '*'" /usr/pgsql-%%PG_MAJOR%%/share/postgresql.conf.sample
+	sed -ri "s!^#?(listen_addresses)\s*=\s*\S+.*!\1 = '*'!" /usr/pgsql-12/share/postgresql.conf.sample; \
+	grep -F "listen_addresses = '*'" /usr/pgsql-12/share/postgresql.conf.sample
 
 # prepare the environment and make sure postgres user has the correct UID
 RUN set -xeu ; \
@@ -85,7 +86,7 @@ RUN set -xeu ; \
 	chown postgres:postgres /var/run/postgresql ; \
 	chmod 0755 /var/run/postgresql
 
-ENV PATH $PATH:/usr/pgsql-%%PG_MAJOR%%/bin
+ENV PATH $PATH:/usr/pgsql-12/bin
 
 RUN mkdir -p /var/run/postgresql && chown -R postgres:postgres /var/run/postgresql && chmod 2777 /var/run/postgresql
 
@@ -95,6 +96,46 @@ RUN mkdir -p "$PGDATA" && chown -R postgres:postgres "$PGDATA" && chmod 777 "$PG
 VOLUME /var/lib/postgresql/data
 
 RUN mkdir /docker-entrypoint-initdb.d
+
+# Postgis
+RUN --mount=type=secret,id=subscription,target=/run/secrets/subscription.sh \
+    --mount=type=secret,id=cs_token \
+	set -xe ; \
+	rm -f /etc/rhsm-host ; \
+	SUBSCRIPTION_NAME="${SUBSCRIPTION_NAME}" bash /run/secrets/subscription.sh ; \
+	yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm ; \
+	ARCH="${TARGETARCH}" ; \
+	pgrouting_pkg="pgrouting_12" ; \
+	case $ARCH in \
+			amd64) \
+				BUILDARCH="x86_64" ;; \
+			arm64) \
+				BUILDARCH="aarch64" ;; \
+			ppc64le) \
+				curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
+				pgrouting_pkg="edb-pg12-pgrouting3" ; \
+				BUILDARCH="ppc64le" ;; \
+			s390x) \
+				curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/edb/setup.rpm.sh | bash ; \
+				pgrouting_pkg="edb-pg12-pgrouting3" ; \
+				BUILDARCH="s390x" ;; \
+			*) \
+					exit 1 ;; \
+	esac ; \
+	yum -y install --enablerepo=ubi-8-codeready-builder,codeready-builder-for-rhel-8-${BUILDARCH}-rpms \
+		postgis34_12-3.4.2 \
+		"$pgrouting_pkg" \
+	; \
+	yum -y remove epel-release ; \
+	subscription-manager remove --all ; \
+	subscription-manager unregister ; \
+	subscription-manager clean ; \
+	yum -y clean all --enablerepo='*' ; \
+	ln -sf /run/secrets/rhsm /etc/rhsm-host ; \
+	rm /var/log/rhsm/rhsm.log
+
+COPY ./initdb-postgis.sh /docker-entrypoint-initdb.d/10_postgis.sh
+COPY ./update-postgis.sh /usr/local/bin
 
 # Remove example certificates in pem and enc format from /usr/share/doc folder
 RUN find /usr/share/doc -type f '(' -iname "*.pem" -o -iname "*.enc" ')' -exec rm -rf {} \; || true
