--- a/UBI/12/Dockerfile.postgis-multiarch.ubi9
+++ b/UBI/12/Dockerfile.postgis-multiarch.ubi9
@@ -1,29 +1,50 @@
 # vim:set ft=dockerfile:
-FROM quay.io/enterprisedb/edb-ubi:8.9-1107.1705420509
+FROM quay.io/enterprisedb/edb-ubi:9.4-1123.1719560047
+ARG SUBSCRIPTION_NAME
 
 # Do not split the description, otherwise we will see a blank space in the labels
-LABEL name="PostgreSQL Container Images" \
+LABEL name="PostgreSQL + PostGIS Container Images" \
       vendor="EnterpriseDB" \
       url="https://www.enterprisedb.com/" \
-      version="12.17" \
-      release="5" \
-      summary="PostgreSQL Container images." \
-      description="This Docker image contains PostgreSQL and Barman Cloud based on RedHat Universal Base Images (UBI) 8."
+      version="12.19" \
+      release="1" \
+      summary="PostgreSQL + PostGIS Container images." \
+      description="This Docker image contains PostgreSQL, PostGIS and Barman Cloud based on RedHat Universal Base Images (UBI) 9."
 
 COPY root/ /
 
 ARG TARGETARCH
-RUN set -xe ; \
+RUN --mount=type=secret,id=cs_token \
+	set -xe ; \
 	ARCH="${TARGETARCH}" ; \
 	base_url="https://download.postgresql.org/pub/repos/yum/reporpms" ; \
+	pg_failover_slots_pkg="pg_failover_slots_12" ; \
+	pg_squeeze_pkg="pg_squeeze_12" ; \
+	pgvector="pgvector_12" ; \
 	pg_audit_pkg="pgaudit14_12" ; \
 	case $ARCH in \
 			amd64) \
-					yum -y install "${base_url}/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ; \
+					yum -y install "${base_url}/EL-9-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ; \
+					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
 					if [ "12" -gt "15" ]; then pg_audit_pkg="pgaudit_12"; fi ;; \
 			arm64) \
-					yum -y install "${base_url}/EL-8-aarch64/pgdg-redhat-repo-latest.noarch.rpm" ; \
+					yum -y install "${base_url}/EL-9-aarch64/pgdg-redhat-repo-latest.noarch.rpm" ; \
+					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
 					if [ "12" -gt "15" ]; then pg_audit_pkg="pgaudit_12"; fi ;; \
+			ppc64le) \
+					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
+					pg_failover_slots_pkg="edb-pg12-pg-failover-slots1" ; \
+					pg_squeeze_pkg="edb-pg12-pg-squeeze1" ; \
+					pgvector="edb-pg12-pgvector0" ; \
+					pg_audit_pkg="edb-pg12-pgaudit1" ; \
+					if [ "12" -gt "15" ]; then pg_audit_pkg="edb-pg12-pgaudit12"; fi ;; \
+			s390x) \
+					curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/edb/setup.rpm.sh | bash ; \
+					pg_failover_slots_pkg="edb-pg12-pg-failover-slots1" ; \
+					pg_squeeze_pkg="edb-pg12-pg-squeeze1" ; \
+					pgvector="edb-pg12-pgvector0" ; \
+					pg_audit_pkg="edb-pg12-pgaudit1" ; \
+					if [ "12" -gt "15" ]; then pg_audit_pkg="edb-pg12-pgaudit12"; fi ;; \
 			*) \
 					exit 1 ;; \
 	esac ; \
@@ -32,13 +53,16 @@ RUN set -xe ; \
 	rm -fr /etc/rpm/macros.image-language-conf ; \
 	yum -y install hostname rsync tar gettext bind-utils nss_wrapper glibc-locale-source glibc-langpack-en glibc-all-langpacks ; \
 	yum -y --setopt=tsflags=nodocs install \
-		postgresql12-12.17 \
-		postgresql12-contrib-12.17 \
-		postgresql12-server-12.17 \
-		postgresql12-libs-12.17 \
-		pg_failover_slots_12 \
-		"$pg_audit_pkg" \
+			postgresql12-12.19 \
+			postgresql12-contrib-12.19 \
+			postgresql12-server-12.19 \
+			postgresql12-libs-12.19 \
+			"$pg_audit_pkg" \
+			"$pg_squeeze_pkg" \
+			"$pg_failover_slots_pkg" \
+			"$pgvector" \
 	; \
+	rm -fr /etc/yum.repos.d/enterprisedb-*.repo ; \
 	rm -fr /tmp/* ; \
 	yum -y clean all --enablerepo='*'
 
@@ -72,6 +96,46 @@ RUN mkdir -p "$PGDATA" && chown -R postgres:postgres "$PGDATA" && chmod 777 "$PG
 VOLUME /var/lib/postgresql/data
 
 RUN mkdir /docker-entrypoint-initdb.d
+
+# Postgis
+RUN --mount=type=secret,id=subscription,target=/run/secrets/subscription.sh \
+    --mount=type=secret,id=cs_token \
+	set -xe ; \
+	rm -f /etc/rhsm-host ; \
+	SUBSCRIPTION_NAME="${SUBSCRIPTION_NAME}" bash /run/secrets/subscription.sh ; \
+	yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm ; \
+	ARCH="${TARGETARCH}" ; \
+	pgrouting_pkg="pgrouting_12" ; \
+	case $ARCH in \
+			amd64) \
+				BUILDARCH="x86_64" ;; \
+			arm64) \
+				BUILDARCH="aarch64" ;; \
+			ppc64le) \
+				curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/enterprise/setup.rpm.sh | bash ; \
+				pgrouting_pkg="edb-pg12-pgrouting3" ; \
+				BUILDARCH="ppc64le" ;; \
+			s390x) \
+				curl -u token:$(cat /run/secrets/cs_token) -1sLf https://downloads.enterprisedb.com/basic/edb/setup.rpm.sh | bash ; \
+				pgrouting_pkg="edb-pg12-pgrouting3" ; \
+				BUILDARCH="s390x" ;; \
+			*) \
+					exit 1 ;; \
+	esac ; \
+	yum -y install --enablerepo=ubi-9-codeready-builder,codeready-builder-for-rhel-9-${BUILDARCH}-rpms \
+		postgis34_12-3.4.2 \
+		"$pgrouting_pkg" \
+	; \
+	yum -y remove epel-release ; \
+	subscription-manager remove --all ; \
+	subscription-manager unregister ; \
+	subscription-manager clean ; \
+	yum -y clean all --enablerepo='*' ; \
+	ln -sf /run/secrets/rhsm /etc/rhsm-host ; \
+	rm /var/log/rhsm/rhsm.log
+
+COPY ./initdb-postgis.sh /docker-entrypoint-initdb.d/10_postgis.sh
+COPY ./update-postgis.sh /usr/local/bin
 
 # Remove example certificates in pem and enc format from /usr/share/doc folder
 RUN find /usr/share/doc -type f '(' -iname "*.pem" -o -iname "*.enc" ')' -exec rm -rf {} \; || true
