fix: avoid installing weak dependencies
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/UBI/Dockerfile-multiarch.template
+++ b/UBI/Dockerfile-multiarch.template
@@ -53,8 +53,8 @@ RUN --mount=type=secret,id=cs_token \
 	yum -y upgrade glibc-common ; \
 	yum -y reinstall glibc-common ; \
 	rm -fr /etc/rpm/macros.image-language-conf ; \
-	yum -y install hostname rsync tar gettext bind-utils nss_wrapper glibc-locale-source glibc-langpack-en glibc-all-langpacks ; \
-	yum -y --setopt=tsflags=nodocs install%%YUM_OPTIONS%% \
+	yum -y install --setopt=install_weak_deps=0 hostname rsync tar gettext bind-utils nss_wrapper glibc-locale-source glibc-langpack-en glibc-all-langpacks ; \
+	yum -y --setopt=tsflags=nodocs --setopt=install_weak_deps=0 install%%YUM_OPTIONS%% \
 			postgresql%%PG_MAJOR%%-%%POSTGRES_VERSION%% \
 			postgresql%%PG_MAJOR%%-contrib-%%POSTGRES_VERSION%% \
 			postgresql%%PG_MAJOR%%-server-%%POSTGRES_VERSION%% \
@@ -71,7 +71,7 @@ RUN --mount=type=secret,id=cs_token \
 
 # Install barman-cloud
 RUN set -xe ; \
-	yum -y install python3.11-pip python3.11-psycopg2 ; \
+	yum -y install --setopt=install_weak_deps=0 python3.11-pip python3.11-psycopg2 ; \
 	pip3.11 install --upgrade pip ; \
 	pip3.11 install -r requirements.txt ; \
 	yum -y clean all --enablerepo='*'
